Fixed the visibility issue on project paragraphs
type: bug

body: Updated the div containing the project’s info on the carrousel so
that it can be read  regardless of the background image.

--- a/Experimental/css/firststyle.sass
+++ b/Experimental/css/firststyle.sass
@@ -77,6 +77,10 @@ video
 
 .fixedheight
   min-height: 250px
+  background-color: gray
+
+  p
+    background-color: inherit
 
 .bkimg
   position: fixed
